<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
                tools:context="com.example.cory.annotate.AddWifiNote">

    <TextView
        android:id="@+id/currentNetworkName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_wifi"/>
    <EditText
        android:hint="@string/note_title"
        android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/note_body"
        android:id="@+id/note_body"
        android:layout_width="match_parent"
        android:gravity="top"
        android:layout_weight="4"
        android:layout_height="0dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveNote"
        android:text="@string/save_note"/>
<Button
    android:id="@+id/cancel_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_note"
        android:onClick="goHome"/>

    </LinearLayout>

</LinearLayout>
