<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.cory.annotate.AvailableNetworksFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialogEditeNote"
        android:background="@color/blue"
        android:textColor="@color/green"
        android:padding="5dp"
        android:text="@string/fragmentEditNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/dialogDeleteNote"
        android:background="@color/blue"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:padding="5dp"
        android:text="@string/fragmentDeleteNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
